# png2icns

./: .gitignore  COMPLETION_USAGE.md  Cargo.toml  Dockerfile  GITHUB_ACTIONS_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  RELEASE_INSTRUCTIONS.md  build.sh  docker-compose.yml  test.sh
.github/: CONTRIBUTING.md  WORKFLOWS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  ci.yml  cleanup.yml  docker-publish.yml
examples/: .gitkeep
input/: .gitkeep
output/: .gitkeep
src/: main.rs
