[package]
name = "png2icns"
version = "1.0.0"
edition = "2021"
authors = ["Developer <dev@example.com>"]
description = "A tool to convert PNG images to ICNS format"
license = "MIT"

[dependencies]
image = "0.24"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
icns = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true